Fixed height problem on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -119,10 +119,10 @@ footer span {
 
 @media (max-width: 400px) {
   main {
-    height: 90vh;
+    height: 100vh;
   }
   section {
-    max-height: 70vh;
+    max-height: 90vh;
   }
   #primary-content {
     display: flex;
